--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.wnameless.json</groupId>
   <artifactId>jsonschema-data-generator</artifactId>
-  <version>0.1.0-SNAPSHOT</version>
+  <version>0.1.0</version>
 
   <name>jsonschema-data-generator</name>
   <description>JSON Schema Data Generator for Java</description>
@@ -33,7 +31,7 @@
     <connection>scm:git:git@github.com:wnameless/jsonschema-data-generator.git</connection>
     <developerConnection>scm:git:git@github.com:wnameless/jsonschema-data-generator.git</developerConnection>
     <url>git@github.com:wnameless/jsonschema-data-generator.git</url>
-    <tag>HEAD</tag>
+    <tag>jsonschema-data-generator-0.1.0</tag>
   </scm>
 
   <distributionManagement>
