--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.github.wnameless.json</groupId>
   <artifactId>jsonschema-data-generator</artifactId>
-  <version>0.2.0-SNAPSHOT</version>
+  <version>0.2.0</version>
 
   <name>jsonschema-data-generator</name>
   <description>JSON Schema Data Generator for Java</description>
@@ -31,7 +31,7 @@
     <connection>scm:git:git@github.com:wnameless/jsonschema-data-generator.git</connection>
     <developerConnection>scm:git:git@github.com:wnameless/jsonschema-data-generator.git</developerConnection>
     <url>git@github.com:wnameless/jsonschema-data-generator.git</url>
-    <tag>HEAD</tag>
+    <tag>jsonschema-data-generator-0.2.0</tag>
   </scm>
 
   <distributionManagement>
